# AutomatedTest

./: .coverage  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/clicks/: LikeButton.py
src/clicks.egg-info/: PKG-INFO  SOURCES.txt
src/clicks/clicks.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tests/: test_clicks.py
