[metadata]
name = clicks
; version = "0.0.1"
author = Oly
description = A small automation test with Python
readme = README.md
requires_python = >=3.9
license = MIT
license_file = LICENSE
classifiers = [
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3 :: Only,
;     "Operating System :: OS Independent",
 ]

    [options]
    packages =
        clicks
    install_requires =
        requests>=2    #just for example(should be your dependencies)
    package_dir =
        =src

    [options.extras_requires]
    testing =
        pytest>=6.0
        pytest-cov>=2.0
        mypy>=0.910
        flake8>=3.9
        tox>=3.24

    [options.package_data]
    clicks = py.typed

    [flake8]
    max-line-length = 160

